<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_row="2"
    android:layout_column="1"
    android:background="#00FFFFFF">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="20dp"
        android:isScrollContainer="true"
        android:nestedScrollingEnabled="false"
        app:layout_constraintBottom_toTopOf="@+id/addButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitleBar" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="78dp"
        android:background="#FF9000"
        android:backgroundTint="#FF9000"
        android:contextClickable="false"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/menuButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/menu_button_description"
            app:srcCompat="@drawable/menu"
            tools:ignore="ImageContrastCheck" />


        <ImageButton
            android:id="@+id/deleteButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/delete_button_description"
            app:srcCompat="@drawable/del"
            tools:ignore="ImageContrastCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/TitleBar"
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:background="#36D88E"
        android:backgroundTint="#36D88E"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="115dp"
            android:layout_height="match_parent"
            android:layout_marginStart="21dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/app_logo"
            app:srcCompat="@drawable/logo"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:text="@string/main_h1"
            android:textAlignment="center"
            android:textColor="#00733E"
            android:textSize="26sp"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="144dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/add_button_description"
        app:layout_constraintBottom_toTopOf="@id/barrier2"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/add"
        tools:ignore="ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>