<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF9000">

    <EditText
        android:id="@+id/editTextComment"
        android:layout_width="323dp"
        android:layout_height="49dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="9dp"
        android:autofillHints=""
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/label_info"
        android:inputType="text"
        android:lineSpacingExtra="8sp"
        android:maxLength="25"
        android:paddingStart="10dp"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:textAlignment="viewStart"
        android:textColor="#E20048"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="DuplicateSpeakableTextCheck,LabelFor,RtlSymmetry" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="25dp"
        android:paddingStart="10dp"
        android:text="@string/label_info"
        android:textColor="#FFFFFF"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAmount"
        tools:ignore="RtlSymmetry,TextContrastCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="74dp"
        android:paddingStart="10dp"
        android:text="@string/label_measure"
        android:textColor="#FFFFFF"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName"
        tools:ignore="RtlSymmetry,TextContrastCheck" />

    <EditText
        android:id="@+id/editTextUnit"
        android:layout_width="129dp"
        android:layout_height="49dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="36dp"
        android:autofillHints=""
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/label_measure"
        android:inputType="text"
        android:lineSpacingExtra="8sp"
        android:maxLength="3"
        android:paddingStart="10dp"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:textAlignment="viewStart"
        android:textColor="#E20048"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="DuplicateSpeakableTextCheck,LabelFor,RtlSymmetry,TextSizeCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="25dp"
        android:paddingStart="10dp"
        android:text="@string/label_amount"
        android:textColor="#FFFFFF"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName"
        tools:ignore="RtlSymmetry,TextContrastCheck" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="323dp"
        android:layout_height="49dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="9dp"
        android:autofillHints=""
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/label_name"
        android:inputType="text"
        android:lineSpacingExtra="8sp"
        android:maxLength="15"
        android:paddingStart="10dp"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:textAlignment="viewStart"
        android:textColor="#E20048"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17"
        tools:ignore="DuplicateSpeakableTextCheck,LabelFor,RtlSymmetry" />

    <EditText
        android:id="@+id/editTextAmount"
        android:layout_width="148dp"
        android:layout_height="49dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="9dp"
        android:autofillHints=""
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/label_amount"
        android:inputType="number"
        android:lineSpacingExtra="8sp"
        android:maxLength="4"
        android:paddingStart="10dp"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:textAlignment="viewStart"
        android:textColor="#E20048"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="DuplicateSpeakableTextCheck,LabelFor,RtlSymmetry,TextSizeCheck" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="87dp"
        android:paddingStart="10dp"
        android:text="@string/label_name"
        android:textColor="#FFFFFF"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitleBar"
        tools:ignore="RtlSymmetry,TextContrastCheck" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="78dp"
        android:background="#FF9000"
        android:contextClickable="false"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/menuButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/menu_button_description"
            app:srcCompat="@drawable/menu"
            tools:ignore="ImageContrastCheck" />


        <ImageButton
            android:id="@+id/deleteButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:clickable="false"
            android:contentDescription="@string/delete_button_description"
            android:visibility="invisible"
            app:srcCompat="@drawable/del"
            tools:ignore="ImageContrastCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/TitleBar"
        android:layout_width="410dp"
        android:layout_height="95dp"
        android:layout_marginBottom="87dp"
        android:background="#36D88E"
        android:backgroundTint="#36D88E"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/textView17"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="115dp"
            android:layout_height="match_parent"
            android:layout_marginStart="21dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/app_logo"
            app:srcCompat="@drawable/logo"
            tools:ignore="ImageContrastCheck" />

    </LinearLayout>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/confirmButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="136dp"
        android:layout_marginBottom="25dp"
        android:layout_weight="1"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/add_button_description"
        app:layout_constraintBottom_toTopOf="@id/barrier2"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/add"
        tools:ignore="ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>